--- a/src/main/resources/static/styles/goals.css
+++ b/src/main/resources/static/styles/goals.css
@@ -1,5 +1,5 @@
 .background {
-  background-image: url("https://images.unsplash.com/photo-1491841550275-ad7854e35ca6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fHJlYWRpbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60");
+  background-image: url("https://media.istockphoto.com/photos/the-interior-has-a-armchair-on-empty-dark-wall-background-picture-id1307111334?b=1&k=20&m=1307111334&s=170667a&w=0&h=9oj_KOC1IrndhZlw4i8EfKSGKoWs1P2eSBBKkpQohQ4=");
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
