--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -27,7 +27,7 @@
     <div class="registration-form">
       <form action="/" method="POST">
         <div class="form-icon">
-          <span><i class="icon icon-user"></i></span>
+          <span><i class="bi bi-person-fill"></i></span>
         </div>
         <div class="form-group">
           <input
