--- a/src/main/resources/templates/tribe.html
+++ b/src/main/resources/templates/tribe.html
@@ -79,7 +79,7 @@
               </div>
               <div class="row">
                 <!-- Single Advisor-->
-                <div class="col-12 col-sm-6 col-lg-3">
+                <div class="col-12 col-sm-6 col-lg-3" data-th-each="u: ${users}">
                   <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
                     <!-- Team Thumb-->
                     <div class="advisor_thumb"><img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
@@ -87,57 +87,14 @@
                       <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
                     </div>
                     <!-- Team Details-->
-                    <div class="single_advisor_details_info">
-                      <h6>Samantha Sarah</h6>
-                      <p class="designation">Founder &amp; CEO</p>
+                    <div class="single_advisor_details_info" >
+                      <h6 data-th-text="${u}"></h6>
+                      <!-- <p class="designation"></p> -->
                     </div>
                   </div>
                 </div>
-                <!-- Single Advisor-->
-                <div class="col-12 col-sm-6 col-lg-3">
-                  <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
-                    <!-- Team Thumb-->
-                    <div class="advisor_thumb"><img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="">
-                      <!-- Social Info-->
-                      <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
-                    </div>
-                    <!-- Team Details-->
-                    <div class="single_advisor_details_info">
-                      <h6>Nazrul Islam</h6>
-                      <p class="designation">UI Designer</p>
-                    </div>
-                  </div>
-                </div>
-                <!-- Single Advisor-->
-                <div class="col-12 col-sm-6 col-lg-3">
-                  <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
-                    <!-- Team Thumb-->
-                    <div class="advisor_thumb"><img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="">
-                      <!-- Social Info-->
-                      <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
-                    </div>
-                    <!-- Team Details-->
-                    <div class="single_advisor_details_info">
-                      <h6>Riyadh Khan</h6>
-                      <p class="designation">Developer</p>
-                    </div>
-                  </div>
-                </div>
-                <!-- Single Advisor-->
-                <div class="col-12 col-sm-6 col-lg-3">
-                  <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
-                    <!-- Team Thumb-->
-                    <div class="advisor_thumb"><img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="">
-                      <!-- Social Info-->
-                      <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
-                    </div>
-                    <!-- Team Details-->
-                    <div class="single_advisor_details_info">
-                      <h6>Niloy Islam</h6>
-                      <p class="designation">Marketing Manager</p>
-                    </div>
-                  </div>
-                </div>
+
+
               </div>
             </div>
     </section>
