--- a/src/main/resources/static/styles/tribe.css
+++ b/src/main/resources/static/styles/tribe.css
@@ -1,6 +1,13 @@
 body{margin-top:20px;
-    background:#eee;
-    }
+    background-color: hsla(0, 0%, 100%, 0.9) !important;
+
+    background-repeat: no-repeat;
+    background-size: auto;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;    
+}
     .single_advisor_profile {
         position: relative;
         margin-bottom: 50px;
@@ -17,7 +24,7 @@ body{margin-top:20px;
         border-radius: 15px 15px 0 0;
         margin: 0 auto;
         padding: 30px 30px 0 30px;
-        background-color: #3f43fd;
+        background-color:bisque;
         overflow: hidden;
     }
     .single_advisor_profile .advisor_thumb::after {
