--- a/src/main/resources/templates/tribe.html
+++ b/src/main/resources/templates/tribe.html
@@ -82,7 +82,7 @@
                 <div class="col-12 col-sm-6 col-lg-3" data-th-each="u: ${users}">
                   <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
                     <!-- Team Thumb-->
-                    <div class="advisor_thumb"><img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                    <div class="advisor_thumb"><img src="https://www.freeiconspng.com/thumbs/profile-icon-png/profile-icon-9.png" alt="">
                       <!-- Social Info-->
                       <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
                     </div>
